--- a/src/main/resources/static/messages.html
+++ b/src/main/resources/static/messages.html
@@ -4,14 +4,17 @@
   <title>Message Data</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      margin: 20px;
+      font-family: 'Roboto', Arial, sans-serif;
+      background: url('logo3.jpg') no-repeat center center fixed;
+      background-size: cover;
+      margin: 0;
+      color: #fff;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      margin: 20px 0;
+      font-size: 36px;
     }
 
     table {
@@ -19,54 +22,65 @@
       width: 100%;
       margin-bottom: 20px;
       border: 1px solid #ddd;
+      color: #fff;
     }
 
     th, td {
-      padding: 8px;
+      padding: 10px;
       text-align: left;
       border-bottom: 1px solid #ddd;
     }
 
     th {
-      background-color: #f2f2f2;
+      background-color: rgba(255, 255, 255, 0.1);
+      font-weight: bold;
     }
 
     .button-container {
       display: flex;
+      gap:15px;
       justify-content: center;
-      margin-top: 10px;
+      margin-top: 20px;
     }
 
     #backButton, #refreshButton {
-      padding: 8px 16px;
-      background-color: #4CAF50;
+      padding: 10px 20px;
+      background-color: #2956b4;
       color: #fff;
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      font-size: 16px;
+      font-weight: 600;
       margin-right: 10px;
+      transition: background-color 0.3s;
     }
 
     #backButton:hover, #refreshButton:hover {
-      background-color: #45a049;
+      background-color: #12347e;
     }
 
     #messageTableBody tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: rgba(0, 0, 0, 0.4);
     }
+
     .delete-button {
-      padding: 6px 12px;
+      padding: 8px 16px;
       background-color: #d71c14;
       color: #fff;
       border: none;
       border-radius: 4px;
       cursor: pointer;
       font-size: 14px;
+      transition: background-color 0.3s;
+      margin-right: -4px;
     }
 
     .delete-button:hover {
       background-color: #940704;
     }
+
+
   </style>
 </head>
 <body>
